[gd_scene load_steps=14 format=3 uid="uid://c3hgjxpj824a5"]

[ext_resource type="PackedScene" uid="uid://6tcmaf2via7e" path="res://Environments/environment.tscn" id="1_moki4"]
[ext_resource type="Script" path="res://Environments/world.gd" id="1_xdfob"]
[ext_resource type="PackedScene" uid="uid://b0eb2yt6v71dc" path="res://Player_Related/player.tscn" id="2_oxyhy"]
[ext_resource type="PackedScene" uid="uid://c6b23n88kl8yk" path="res://Inventory/inventory.tscn" id="3_npxwj"]
[ext_resource type="Script" path="res://Inventory/Inventory_Interface.gd" id="4_0asnx"]
[ext_resource type="Script" path="res://Environments/Panel.gd" id="6_tojry"]
[ext_resource type="PackedScene" uid="uid://c32je37dwa80u" path="res://Item/item_assets/Apple.tscn" id="6_vcgyr"]
[ext_resource type="FontFile" uid="uid://c36uj27nn71j1" path="res://Assets/LEMONMILK-Regular.otf" id="7_h3qir"]
[ext_resource type="PackedScene" uid="uid://d1buffo3ps52l" path="res://Item/item_assets/KingsCoin.tscn" id="9_3lib6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3ghav"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_7wc0o"]
sky_material = SubResource("ProceduralSkyMaterial_3ghav")

[sub_resource type="Environment" id="Environment_2ohux"]
background_mode = 2
sky = SubResource("Sky_7wc0o")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74fsv"]
bg_color = Color(0.227451, 0.298039, 0.552941, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="World" type="Node3D"]
script = ExtResource("1_xdfob")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2ohux")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Environment" parent="." instance=ExtResource("1_moki4")]

[node name="Player" parent="." instance=ExtResource("2_oxyhy")]
transform = Transform3D(-0.99801, 0, -0.0630518, 0, 1, 0, 0.0630518, 0, -0.99801, 0.000657737, 1.12937, -23.0438)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_0asnx")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("3_npxwj")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -78.0
offset_right = 20.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -252.0
offset_right = 224.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_74fsv")
script = ExtResource("6_tojry")

[node name="Title" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 24.0
offset_right = 150.0
offset_bottom = 51.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_h3qir")
theme_override_font_sizes/font_size = 20
text = "Character Customization"
horizontal_alignment = 1

[node name="PerkBalance" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -176.0
offset_right = -59.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_h3qir")
theme_override_font_sizes/font_size = 16
text = "Perk Balance: "
horizontal_alignment = 1

[node name="Hunger" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 152.0
offset_right = 72.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("7_h3qir")
text = "Hunger: "

[node name="Apple" parent="." instance=ExtResource("6_vcgyr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879609, -20.3291)

[node name="RigidBody3D" parent="." instance=ExtResource("9_3lib6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
